--- a/app/globals.css
+++ b/app/globals.css
@@ -19,5 +19,18 @@
   }
 }
 
+button {
+  font-size: 16px;
+  margin: 5px;
+  padding: 10px 20px;
+  background-color: aqua;
+}
+
+p {
+  margin-top: 20px;
+  font-size: 18px;
+  white-space: pre-wrap;
+}
+
 body {
 }
